<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@color/white"

    >


    <RelativeLayout
        android:id="@+id/main.backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarSheet"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:padding="18dp"
        android:scaleType="centerCrop"
        app:layout_collapseMode="parallax">


        <TextView
            android:id="@+id/codeOrderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:text="Номер заказа:"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/codeOrderTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/codeOrderTitle"
            android:text="@string/app_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/dateTimeOrderTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="2020"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/totalOrderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/codeOrderTxtView"
            android:paddingVertical="10dp"
            android:text="@string/txt_total"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/totalOrderTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/codeOrderTxtView"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/totalOrderTitle"
            android:paddingVertical="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/listOrderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalOrderTxtView"
            android:paddingVertical="10dp"
            android:text="@string/txt_detail_order"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/listOrderTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listOrderTitle"
            android:paddingVertical="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black" />

    </RelativeLayout>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/primary"
        app:layout_collapseMode="pin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_order_txt"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/statusOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>


</RelativeLayout>
