<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fadeScrollbars="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/lytContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/checkout_your_name"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/checkout_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/txt_number_tel"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="top"
                    android:hint="@string/txt_adress"
                    android:lines="3"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="18dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/txt_shipping"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />


                    <EditText
                        android:id="@+id/edt_shipping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/txt_shipping"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:visibility="gone"
                        tools:ignore="Autofill">

                    </EditText>

                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/payTitleTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="10dp"
                    android:text="Способ оплаты"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:id="@+id/payTypeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/payTitleTxtView"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:focusable="true"
                    android:paddingVertical="12dp">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        tools:ignore="UselessParent">

                        <RadioButton
                            android:id="@+id/rBtnCash"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center_vertical"
                            android:buttonTint="@android:color/holo_green_light"
                            android:text="Оплата наличными"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            />

                        <RadioButton
                            android:id="@+id/rBtnCard"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center_vertical"
                            android:buttonTint="@android:color/holo_green_light"
                            android:text="Онлайн банковской картой"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                        <RadioButton
                            android:id="@+id/rBtnCurier"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center_vertical"
                            android:buttonTint="@android:color/holo_green_light"
                            android:text="Оплата курьеру наличными"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </RadioGroup>


                </FrameLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/txtRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="18sp"
                    android:text="@string/checkout_detail"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_order_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18sp"
                    android:background="@color/white"
                    android:enabled="false"
                    android:gravity="top|start"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_order_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/add_comment"
                    android:inputType="textCapWords"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit_order"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:text="@string/confirm_order_text"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>




    <ProgressBar
        android:id="@+id/progress_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>